--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -13,6 +13,7 @@
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
     </script>
     <link rel="stylesheet" href="/scss/master.css">
+    <link rel="shortcut icon" type="image/x-icon" href="resources/images/gymplanicon.ico">
 
 
 </head>
@@ -25,29 +26,32 @@
 
     <header>
         <nav class="navbar navbar-expand-md navbar-dark  bg-dark">
-          <div class="container-fluid">
-            <a class="navbar-brand d-flex flex-row align-items-center" href="#">
-                <div id="logo"></div>
-                
-            </a>
-            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse" id="navbarCollapse" style="">
-              <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                <li class="nav-item active">
-                  <a class="nav-link" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">References</a>
-                </li>
-              </ul>
+            <div id="" class="fw-bold container-fluid">
+                <a class="navbar-brand d-flex flex-row align-items-center" href="/">
+                    <div id="logo"></div>
+
+                </a>
+                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse" id="navbarCollapse" style="">
+                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                        <li class="nav-item active">
+                            <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">References</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-          </div>
         </nav>
-      </header>
+    </header>
 
 
+    <!--Navbar/Header Ends-->
 
 
     <!--Carousel Begins-->
@@ -56,38 +60,38 @@
 
         </div>
         <div id="intro-container">
-            <div id="introCard" class="card" style="width: 18rem;">
+            <div id="introCard" class="card text-center" style="width: 18rem;">
                 <div id="introCard-body" class="card-body">
                     <h5 class="card-title">Got no idea what exercises to do?</h5>
-                    <div id="icon-container">
-                        <svg class="bd-placeholder-img rounded-circle" width="40" height="40"
+                    <div id="icon-container" class="d-flex justify-content-center justify-content-around">
+                        <img src="/resources/images/Biceps.jpg" class="bd-placeholder-img rounded-circle" width="40"
+                            height="40" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
+                            preserveAspectRatio="xMidYMid slice" focusable="false">
+                        <title>Biceps</title>
+                        <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777"
+                            dy=".3em"></text>
+                        </img>
+                        <img src="/resources/images/Back.png" class="bd-placeholder-img rounded-circle" width="40"
+                            height="40" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
+                            preserveAspectRatio="xMidYMid slice" focusable="false">
+                        <title>Back</title>
+                        <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777"
+                            dy=".3em"></text>
+                        </img>
+                        <img src="/resources/images/front.png" class="bd-placeholder-img rounded-circle" width="40"
+                            height="40" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
+                            preserveAspectRatio="xMidYMid slice" focusable="false">
+                        <title>Front</title>
+                        <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777"
+                            dy=".3em"></text>
+                        </img>
+                        <img src="/resources/images/legs.jpg" class="bd-placeholder-img rounded-circle" width="40" height="40"
                             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
                             preserveAspectRatio="xMidYMid slice" focusable="false">
-                            <title>Biceps</title>
-                            <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777"
-                                dy=".3em"></text>
-                        </svg>
-                        <svg class="bd-placeholder-img rounded-circle" width="40" height="40"
-                            xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
-                            preserveAspectRatio="xMidYMid slice" focusable="false">
-                            <title>Back</title>
-                            <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777"
-                                dy=".3em"></text>
-                        </svg>
-                        <svg class="bd-placeholder-img rounded-circle" width="40" height="40"
-                            xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
-                            preserveAspectRatio="xMidYMid slice" focusable="false">
-                            <title>Front</title>
-                            <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777"
-                                dy=".3em"></text>
-                        </svg>
-                        <svg class="bd-placeholder-img rounded-circle" width="40" height="40"
-                            xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
-                            preserveAspectRatio="xMidYMid slice" focusable="false">
-                            <title>Legs</title>
-                            <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777"
-                                dy=".3em"></text>
-                        </svg>
+                        <title>Legs</title>
+                        <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777"
+                            dy=".3em"></text>
+                        </img>
                     </div>
                     <br>
                     <p class="card-text">With just the simple touch of a button, a daily plan with different exercises
@@ -111,6 +115,8 @@
             </div>
         </div>
     </div>
+
+    <!--Carousel Ends-->
 
     <!-- Cards Start -->
 
@@ -161,9 +167,9 @@
     <footer class="container py-5">
         <div class="row">
             <div class="col-12 col-md">
-                <img src="/resources/images/KettlebellIcon2.png" width="55" height="55" fill="none" stroke="currentColor"
-                    stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mb-2" role="img"
-                    viewBox="0 0 24 24">
+                <img src="/resources/images/KettlebellIcon2.png" width="55" height="55" fill="none"
+                    stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    class="d-block mb-2" role="img" viewBox="0 0 24 24">
                 <title>Product</title>
                 <circle cx="12" cy="12" r="10"></circle>
                 <path
@@ -202,12 +208,12 @@
             </div>
             <div class="col-6 col-md">
                 <h5>About</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="link-secondary" href="#">Team</a></li>
-                    <li><a class="link-secondary" href="#">Locations</a></li>
-                    <li><a class="link-secondary" href="#">Privacy</a></li>
-                    <li><a class="link-secondary" href="#">Terms</a></li>
-                </ul>
+                <p class=" link-secondary text-small">
+                    Hi! This website is made by a Student at NTI-Kronhus. <br>
+                    His alias is (Fruit7uice). <br>
+                    It was created to make it easier
+                    to come up with exercises to do at the gym or at home.
+                </p>
             </div>
         </div>
     </footer>
