--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -156,6 +156,12 @@
 
             </div>
         </div>
+        <br>
+        <div class="container py-5">
+            <p class="note card-subtitle mb-3 text-muted text-center">* Click the orange button saying "Generate Plan" to create a new set of cards with exercises.</p>
+
+        </div>
+        
     </div>
 
     <!-- Cards ending -->
