--- a/views/pages/faq.ejs
+++ b/views/pages/faq.ejs
@@ -38,11 +38,11 @@
                 </button>
                 <div class="navbar-collapse collapse" id="navbarCollapse">
                     <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                        <li class="nav-item active">
-                            <a class="nav-link active" aria-current="page" href="/">Home</a>
-                        </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/faq">FAQ</a>
+                            <a class="nav-link" href="/">Home</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link active" aria-current="page" href="/faq">FAQ</a>
                         </li>
                     </ul>
                 </div>
@@ -53,118 +53,133 @@
 
     <!--Navbar/Header Ends-->
 
+    <!--Main Content Begin-->
 
-    <!--Carousel Begins-->
-    <div id="carousel-slides" class="carousel slide carousel-fade" data-bs-ride="carousel">
-        <div id="carousel-cover">
+    <div class="container">
 
-        </div>
-        <div id="intro-container">
-            <div id="introCard" class="card text-center" style="width: 18rem;">
-                <div id="introCard-body" class="card-body">
-                    <h5 class="card-title">Got no idea what exercises to do?</h5>
-                    <div id="icon-container" class="d-flex justify-content-center justify-content-around">
-                        <img src="/resources/images/Biceps.jpg" class="bd-placeholder-img rounded-circle" width="40"
-                            height="40" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
-                            preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <title>Biceps</title>
-                        <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777"
-                            dy=".3em"></text>
-                        </img>
-                        <img src="/resources/images/Back.png" class="bd-placeholder-img rounded-circle" width="40"
-                            height="40" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
-                            preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <title>Back</title>
-                        <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777"
-                            dy=".3em"></text>
-                        </img>
-                        <img src="/resources/images/front.png" class="bd-placeholder-img rounded-circle" width="40"
-                            height="40" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
-                            preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <title>Front</title>
-                        <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777"
-                            dy=".3em"></text>
-                        </img>
-                        <img src="/resources/images/legs.jpg" class="bd-placeholder-img rounded-circle" width="40" height="40"
-                            xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
-                            preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <title>Legs</title>
-                        <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777"
-                            dy=".3em"></text>
-                        </img>
+        <h3 class="text-center py-5">Got questions, feel free to check down below if your question has been answered:
+        </h3>
+
+    </div>
+
+
+
+    <div class="container py-4">
+        <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="heading1">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
+                        <strong>Story/Purpose</strong>
+                    </button>
+                </h2>
+                <div id="collapse1" class="accordion-collapse collapse" aria-labelledby="heading1"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        The story behind this concept was founded when the creator of this site had been training for a
+                        while and felt like there was missing variations in his exercises. He wanted to get more results
+                        and started searching on how to gain that. One of the factors was <strong>variations</strong> in
+                        exercises.
+                        So he wanted to create a simple get functional website for himself and others that would
+                        generate different exercises
+                        to do at home.
                     </div>
-                    <br>
-                    <p class="card-text">With just the simple touch of a button, a daily plan with different exercises
-                        will
-                        be generated to fit your
-                        needs in terms of training.</p><br>
-                    <a href="/getexercises" id="generatorBtn" class="btn btn-info" role="button">Generate Plan</a>
                 </div>
             </div>
-        </div>
-
-        <div id="carousel-body" class="carousel-inner">
-            <div class="carousel-item active">
-                <div id="carousel-img" class="d-block w-100"></div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="heading2">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapseTwo">
+                        <strong>Policy</strong>
+                    </button>
+                </h2>
+                <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        Our policy is to help people who want to do exercise by randomizing exercises and each of its
+                        respective content.
+                        We are not responsible for any <strong>Injuries</strong> or <strong>such matters</strong> caused
+                        by following the offered exercises.
+                        Be careful and do not overdo the exercise if you feel any pain och discomfort.
+                        If you get <strong>Injured</strong>, please consult with a Medic/Doctor.
+                        Feel free to do the exercise however you want to if you feel it is to little or to much. The
+                        <strong>Number</strong> of sets
+                        and reps is supposed to be altered after you own ability.
+                    </div>
+                </div>
             </div>
-            <div class="carousel-item">
-                <div id="carousel-img2" class="d-block w-100"></div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="heading3">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapseThree">
+                        <strong>Diets</strong>
+                    </button>
+                </h2>
+                <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        We do not recommend any diets and are not responsible for any failures you make.
+                        A world known fact is to keep your food intake accordingly to the amount of recommended calories
+                        for your body type and age.
+                        We are not taking responsibility if you get ill or follow these words.
+                    </div>
+                </div>
             </div>
-            <div class="carousel-item">
-                <div id="carousel-img3" class="d-block w-100"></div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="heading4">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapseTwo">
+                        <strong>Covid-19</strong>
+                    </button>
+                </h2>
+                <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        We recommend that you train outdoors and online as much as possible.
+                        Also try to wipe down equipment with sanitation when done with it.
+                        We urge you to follow the Wold Health Organization recommendations.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="heading5">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapseTwo">
+                        <strong>Contact</strong>
+                    </button>
+                </h2>
+                <div id="collapse5" class="accordion-collapse collapse" aria-labelledby="heading5"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        If you have any other questions please feel free to contact us by email:
+                        <a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSBnNVXNCjhCKMsWvZTKfWFnxsrZnLPhdjjlrlxNxXDTtVmNzmdvXmHmGqJxXRDnvZvsprXr">elolos653w@5staring.com</a>
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="heading6">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapseTwo">
+                        <strong>Sources</strong>
+                    </button>
+                </h2>
+                <div id="collapse6" class="accordion-collapse collapse" aria-labelledby="heading6"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        The Exercises provided is built after the sources below to create universal exercises to fit many needs: <br>
+                        <a href="https://link.springer.com/article/10.1007/s00421-003-0833-3">https://link.springer.com/article/10.1007/s00421-003-0833-3</a> <br>
+                        <a href="https://pubmed.ncbi.nlm.nih.gov/3173042/">https://pubmed.ncbi.nlm.nih.gov/3173042/</a> <br>
+                        <a href="https://pubmed.ncbi.nlm.nih.gov/2222798/">https://pubmed.ncbi.nlm.nih.gov/2222798/</a> <br>
+                        <a href="https://academic.oup.com/biomedgerontology/article/60/5/638/561415#8951713">https://academic.oup.com/biomedgerontology/article/60/5/638/561415#8951713</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
-    <!--Carousel Ends-->
+    <!--Main Content Ends-->
 
-    <!-- Cards Start -->
 
-    <div class="album py-5 bg-light">
-        <div class="container">
-
-            <div
-                class="d-flex justify-content-center justify-content-around row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-
-                <% for( let i = 0; i < exercises.length; i++ ) { %>
-                <div class="cards-body card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h3 class="card-title fs-4"><%= exercises[i].exerciseName %></h3>
-                        <h6 class="card-subtitle mb-2 text-muted"> <%= exercises[i].area %></h6>
-                        <hr>
-                        <ul>
-                            <li><b>Strenght:</b> <%= exercises[i].strenghtSets %> sets; <%= exercises[i].strenghtReps %>
-                                amount
-                                of
-                                repetitions</li>
-                            <li><b>Growth:</b> <%= exercises[i].growthSets %> sets; <%= exercises[i].growthReps %>
-                                amount of
-                                repetitions
-                            </li>
-                            <li><b>Endurance:</b> <%= exercises[i].enduranceSets %> sets;
-                                <%= exercises[i].enduranceReps %>
-                                amount of
-                                repetitions</li>
-                        </ul>
-                        <p class="note card-subtitle mb-2 text-muted">* Note that it is just a suggestions of reps and
-                            sets.
-                            More information can be found at the
-                            References page.</p>
-                    </div>
-                </div>
-                <% } %>
-
-            </div>
-        </div>
-        <br>
-        <div class="container py-5">
-            <p class="note card-subtitle mb-3 text-muted text-center">* Click the orange button saying "Generate Plan" to create a new set of cards with exercises.</p>
-
-        </div>
-        
-    </div>
-
-    <!-- Cards ending -->
 
 
 
@@ -183,7 +198,7 @@
                 </path></img>
                 <small class="d-block mb-3 text-muted">©2021-</small>
             </div>
-            
+
             <div class="col-6 col-md">
                 <h5>FAQ</h5>
                 <ul class="list-unstyled text-small">
