--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -133,7 +133,7 @@
                         <h6 class="card-subtitle mb-2 text-muted"> <%= exercises[i].area %></h6>
                         <hr>
                         <ul>
-                            <li><b>Strenght:</b> <%= exercises[i].strenghtSets %> sets; <%= exercises[i].strenghtReps %>
+                            <li><b>Strength:</b> <%= exercises[i].strenghtSets %> sets; <%= exercises[i].strenghtReps %>
                                 amount
                                 of
                                 repetitions</li>
