--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -146,10 +146,6 @@
                                 amount of
                                 repetitions</li>
                         </ul>
-                        <p class="note card-subtitle mb-2 text-muted">* Note that it is just a suggestions of reps and
-                            sets.
-                            More information can be found at the
-                            References page.</p>
                     </div>
                 </div>
                 <% } %>
@@ -159,7 +155,10 @@
         <br>
         <div class="container py-5">
             <p class="note card-subtitle mb-3 text-muted text-center">* Click the orange button saying "Generate Plan" to create a new set of cards with exercises.</p>
-
+            <p class="note card-subtitle mb-2 text-muted text-center">* Note that the cards exercises gives a suggestions of reps and
+                sets.
+                More information can be found at the
+                References page.</p>
         </div>
         
     </div>
