--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -158,7 +158,7 @@
             <p class="note card-subtitle mb-2 text-muted text-center">* Note that the cards exercises gives a suggestions of reps and
                 sets.
                 More information can be found at the
-                References page.</p>
+                FAQ page.</p>
         </div>
         
     </div>
@@ -188,7 +188,7 @@
                 <ul class="list-unstyled text-small">
                     <li><a class="link-secondary" href="/faq">Story Behind</a></li>
                     <li><a class="link-secondary" href="/faq">Recommendations</a></li>
-                    <li><a class="link-secondary" href="/faq">Diets</a></li>
+                    <li><a class="link-secondary" href="/faq">Disclaimers</a></li>
                     <li><a class="link-secondary" href="/faq">Covid-19</a></li>
                     <li><a class="link-secondary" href="/faq">Contact</a></li>
                     <li><a class="link-secondary" href="/faq">Sources</a></li>
