--- a/views/pages/faq.ejs
+++ b/views/pages/faq.ejs
@@ -213,7 +213,7 @@
                 <ul class="list-unstyled text-small">
                     <li><a class="link-secondary" href="/faq">Story Behind</a></li>
                     <li><a class="link-secondary" href="/faq">Recommendations</a></li>
-                    <li><a class="link-secondary" href="/faq">Diets</a></li>
+                    <li><a class="link-secondary" href="/faq">Disclaimers</a></li>
                     <li><a class="link-secondary" href="/faq">Covid-19</a></li>
                     <li><a class="link-secondary" href="/faq">Contact</a></li>
                     <li><a class="link-secondary" href="/faq">Sources</a></li>
