--- a/views/pages/forms.ejs
+++ b/views/pages/forms.ejs
@@ -33,22 +33,9 @@
             <label for="">Area of Exercise</label>
             <input name="area" type="text" placeholder="biceps, back, quads etc">
             <label for="">Exercise Name:</label>
-            <input name="exerciseName" type="text" placeholder="Ex. Lat pulldowns"><br>
-            <label for="">Strenght Sets and Reps:</label>
-            <input name="strenghtSets" type="number" placeholder="SETS Ex. 1-3">
-            <input name="strenghtReps" type="number"  placeholder="REPS Ex. 1-6"><br>
-            <label for="">Growth Sets and Reps:</label>
-            <input name="growthSets" type="number"  placeholder="SETS Ex. 6-8">
-            <input name="growthReps" type="number" placeholder="SETS Ex. 8-12"><br>
-            <label for="">Endurance Sets and Reps:</label>
-            <input name="enduranceSets" type="number"  placeholder="SETS Ex. 7-8">
-            <input name="enduranceReps" type="number"  placeholder="Ex. 12-20"><br>
-            <label for="">Difficulty:</label>
-            <input name="difficulty" type="number" placeholder="1-3"><br>
+            <input name="exerciseName" type="text" placeholder="Ex. Lat pulldown"><br>
             <input id="formBtn" type="submit" value="Submit">
         </form>
-
-    
     </div>
 
 </body>
