--- a/views/pages/faq.ejs
+++ b/views/pages/faq.ejs
@@ -69,7 +69,7 @@
             <div class="accordion-item">
                 <h2 class="accordion-header" id="heading1">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
+                        data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapseOne">
                         <strong>Story/Purpose</strong>
                     </button>
                 </h2>
@@ -128,9 +128,29 @@
                 </div>
             </div>
             <div class="accordion-item">
+                <h2 class="accordion-header" id="heading7">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapse7" aria-expanded="false" aria-controls="collapseSeven">
+                        <strong>Rest</strong>
+                    </button>
+                </h2>
+                <div id="collapse7" class="accordion-collapse collapse" aria-labelledby="heading7"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                       An important part of exercising is getting the right amount of rest.
+                       Sleep is really important to make sure your muscles get rest. <br>
+                       The recommendations hours of sleep for your muscles are 7-9 hours per night (sportslabnyc, n.d).
+                       Rest between sets is very important for the right development: <br>
+                        <strong>Strength Training</strong> "To get stronger faster, the best rest period is 3 to 5 minutes between sets" (bodybuilding.com, March 05, 2021) <br>
+                        <strong>Hypertrophy Training</strong> "To get bigger quicker, the best rest period is 1 to 2 minutes between sets" (bodybuilding.com, March 05, 2021) <br> 
+                        <strong>Endurance Training</strong> "To increase muscular endurance as quickly as possible, the best rest period is 45 seconds to 2 minutes between sets" (bodybuilding.com, March 05, 2021)
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
                 <h2 class="accordion-header" id="heading4">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapseTwo">
+                        data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapseFour">
                         <strong>Covid-19</strong>
                     </button>
                 </h2>
@@ -180,6 +200,9 @@
                         <br>
                         <a
                             href="https://academic.oup.com/biomedgerontology/article/60/5/638/561415#8951713">https://academic.oup.com/biomedgerontology/article/60/5/638/561415#8951713</a>
+                        <br>
+                        <a href="https://sportslabnyc.com/sleep-muscle-recovery/">https://sportslabnyc.com/sleep-muscle-recovery/</a>
+                        
                     </div>
                 </div>
             </div>
