Added rest to footer and extended list of exercises

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -189,6 +189,7 @@
                     <li><a class="link-secondary" href="/faq">Story Behind</a></li>
                     <li><a class="link-secondary" href="/faq">Recommendations</a></li>
                     <li><a class="link-secondary" href="/faq">Disclaimers</a></li>
+                    <li><a class="link-secondary" href="/faq">Rest</a></li>
                     <li><a class="link-secondary" href="/faq">Covid-19</a></li>
                     <li><a class="link-secondary" href="/faq">Contact</a></li>
                     <li><a class="link-secondary" href="/faq">Sources</a></li>
