--- a/client/scss/master.scss
+++ b/client/scss/master.scss
@@ -97,20 +97,20 @@ body {
     #carousel-img {
 
         height: $CarouselHeight;
-        @include ImgProp(url(/resources/images/Militarypressgirl1.jpg), center, no-repeat, cover);
+        @include ImgProp(url(https://images.unsplash.com/photo-1541534741688-6078c6bfb5c5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1049&q=80), center, no-repeat, cover);
         //<span>Photo by <a href="https://unsplash.com/@johnarano?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">John Arano</a> on <a href="https://unsplash.com/s/photos/gym?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
 
     }
 
     #carousel-img2 {
         height: $CarouselHeight;
-        @include ImgProp(url(/resources/images/pushupman.jpg), center, no-repeat, cover);
+        @include ImgProp(url(https://images.unsplash.com/photo-1598632640487-6ea4a4e8b963?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1349&q=80), center, no-repeat, cover);
         // <span>Photo by <a href="https://unsplash.com/@karsten116?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Karsten Winegeart</a> on <a href="https://unsplash.com/s/photos/pushups?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
     }
 
     #carousel-img3 {
         height: $CarouselHeight;
-        @include ImgProp(url(/resources/images/Squatgirl.jpg), center, no-repeat, cover);
+        @include ImgProp(url(https://miro.medium.com/max/700/0*YArrGzYvW56smeHu), center, no-repeat, cover);
         // <span>Photo by <a href="https://unsplash.com/@johnfo?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">John Fornander</a> on <a href="https://unsplash.com/s/photos/gym?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
     }
 }
