Added sources in faq and meta tags

--- a/views/pages/faq.ejs
+++ b/views/pages/faq.ejs
@@ -202,7 +202,11 @@
                             href="https://academic.oup.com/biomedgerontology/article/60/5/638/561415#8951713">https://academic.oup.com/biomedgerontology/article/60/5/638/561415#8951713</a>
                         <br>
                         <a href="https://sportslabnyc.com/sleep-muscle-recovery/">https://sportslabnyc.com/sleep-muscle-recovery/</a>
-                        
+                        <br>
+                        <a href="https://www.nerdfitness.com/blog/the-correct-number-of-reps-per-set-in-the-gym/ ">https://www.nerdfitness.com/blog/the-correct-number-of-reps-per-set-in-the-gym/ </a>
+                        <br>
+                        <a href="https://www.bodybuilding.com/content/what-is-the-optimal-time-between-sets-for-muscle-growth.html">https://www.bodybuilding.com/content/what-is-the-optimal-time-between-sets-for-muscle-growth.html</a>
+
                     </div>
                 </div>
             </div>
