--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="End of your imagination? Generate a gym plan adapted to your goals and liking">
+    <meta name="keywords" content="GYM, gym, PLAN, plan, Gymplan, gymplan">
+    <meta name="author" content="Fruit7uice">
+
     <title>Gym Plan</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,8 +18,7 @@
     </script>
     <link rel="stylesheet" href="/scss/master.css">
     <link rel="shortcut icon" type="image/x-icon" href="resources/images/gymplanicon.ico">
-
-
+    
 </head>
 
 
