--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -42,10 +42,10 @@
                 <div class="navbar-collapse collapse" id="navbarCollapse">
                     <ul class="navbar-nav me-auto mb-2 mb-md-0">
                         <li class="nav-item active">
-                            <a class="nav-link active" aria-current="page" href="/">Home</a>
+                            <a class="nav-link active fs-5" aria-current="page" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/faq">FAQ</a>
+                            <a class="nav-link fs-5" href="/faq">FAQ</a>
                         </li>
                     </ul>
                 </div>
